tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr60062.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr60062.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[6] = "hello" [cir_private, default, align 1, dso_local, constant]
global a : s32i = 0 [external, default, align 4, dso_local]

fn strcmp(%arg0: s8i*, %arg1: s8i*) -> s32i [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn foo(%arg1: s8i*, %arg2: s32i) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s8i*, %arg2: s32i):
        %17 = alloca s8i*, "p1", align 8
        %18 = alloca s32i, "p2", align 4
        store %arg1, %17
        store %arg2, %18
        scope {
            %19 = load %17 : s8i*, align 8
            %20 = get_global @.str : s8i[6]*
            %21 = cast(array_to_ptrdecay) %20 : s8i*
            %22 = call @strcmp(%19, %21) : s32i [all]
            %23 = const 0 : s32i
            %24 = cmp ne %22, %23 : bool
            if %24 {
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn bar(%arg0: s8i*) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i*):
        %10 = alloca s8i*, "p1", align 8
        store %arg0, %10
        scope {
            %11 = load %10 : s8i*, align 8
            %12 = get_global @.str : s8i[6]*
            %13 = cast(array_to_ptrdecay) %12 : s8i*
            %14 = call @strcmp(%11, %13) : s32i [all]
            %15 = const 0 : s32i
            %16 = cmp ne %14, %15 : bool
            if %16 {
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @.str : s8i[6]*
    %3 = cast(array_to_ptrdecay) %2 : s8i*
    %4 = get_global @a : s32i*
    %5 = load %4 : s32i, align 4
    call @foo(%3, %5) [all]
    %6 = get_global @.str : s8i[6]*
    %7 = cast(array_to_ptrdecay) %6 : s8i*
    call @bar(%7) [all]
    %8 = const 0 : s32i
    store %8, %0
    %9 = load %0 : s32i
    return %9
}
