tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr60454.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr60454.c" (c, x86_64-unknown-linux-gnu)
fn fake_swap32(%arg0: u32i) -> u32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u32i):
        %16 = alloca u32i, "in", align 4
        %17 = alloca u32i, "__retval", align 4
        store %arg0, %16
        %18 = load %16 : u32i, align 4
        %19 = const 255 : u32i
        %20 = and %18, %19 : u32i
        %21 = const 24 : s32i
        %22 = shift left %20, %21 : u32i
        %23 = load %16 : u32i, align 4
        %24 = const 65280 : u32i
        %25 = and %23, %24 : u32i
        %26 = const 8 : s32i
        %27 = shift left %25, %26 : u32i
        %28 = or %22, %27 : u32i
        %29 = load %16 : u32i, align 4
        %30 = const 255 : u32i
        %31 = and %29, %30 : u32i
        %32 = const 8 : s32i
        %33 = shift left %31, %32 : u32i
        %34 = or %28, %33 : u32i
        %35 = load %16 : u32i, align 4
        %36 = const 65280 : u32i
        %37 = and %35, %36 : u32i
        %38 = or %34, %37 : u32i
        %39 = load %16 : u32i, align 4
        %40 = const 4278190080 : u32i
        %41 = and %39, %40 : u32i
        %42 = const 24 : s32i
        %43 = shift right %41, %42 : u32i
        %44 = or %38, %43 : u32i
        store %44, %17
        %45 = load %17 : u32i
        return %45
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %9 = const 4 : u64i
        %10 = const 8 : u64i
        %11 = mul %9, %10 : u64i
        %12 = const 32 : u64i
        %13 = cmp ne %11, %12 : bool
        if %13 {
            %14 = const 0 : s32i
            store %14, %0
            %15 = load %0 : s32i
            return %15
        }
        yield
    }
    scope {
        %4 = const 305419896 : u32i
        %5 = call @fake_swap32(%4) : u32i [all]
        %6 = cast(integral) %5 : u64i
        %7 = const 2018934290 : u64i
        %8 = cmp ne %6, %7 : bool
        if %8 {
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
