tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr60960.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr60960.c" (c, x86_64-unknown-linux-gnu)
fn f1(%arg3: u32i) -> u32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: u32i):
        %85 = alloca vector<4 x u8i>, "coerce", align 4
        %86 = alloca u32i, "coerce", align 4
        store %arg3, %86
        %87 = cast(bitcast) %86 : vector<4 x u8i>*
        %88 = load %87 : vector<4 x u8i>
        %89 = alloca vector<4 x u8i>, "v", align 4
        %90 = alloca vector<4 x u8i>, "__retval", align 4
        store %88, %89
        %91 = load %89 : vector<4 x u8i>, align 4
        %92 = const 2 : u8i
        <unmodeled: cir.vec.splat>
        %94 = div %91, %93 : vector<4 x u8i>
        store %94, %90
        %95 = load %90 : vector<4 x u8i>
        store %95, %85
        %96 = cast(bitcast) %85 : u32i*
        %97 = load %96 : u32i
        return %97
}
fn f2(%arg2: u32i) -> u32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: u32i):
        %71 = alloca vector<4 x u8i>, "coerce", align 4
        %72 = alloca u32i, "coerce", align 4
        store %arg2, %72
        %73 = cast(bitcast) %72 : vector<4 x u8i>*
        %74 = load %73 : vector<4 x u8i>
        %75 = alloca vector<4 x u8i>, "v", align 4
        %76 = alloca vector<4 x u8i>, "__retval", align 4
        %77 = alloca vector<4 x u8i>, ".compoundliteral", align 4
        store %74, %75
        %78 = load %75 : vector<4 x u8i>, align 4
        %79 = const [2, 2, 2, 2] : vector<4 x u8i>
        store %79, %77, align 4
        %80 = load %77 : vector<4 x u8i>, align 4
        %81 = div %78, %80 : vector<4 x u8i>
        store %81, %76
        %82 = load %76 : vector<4 x u8i>
        store %82, %71
        %83 = cast(bitcast) %71 : u32i*
        %84 = load %83 : u32i
        return %84
}
fn f3(%arg0: u32i, %arg1: u32i) -> u32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u32i, %arg1: u32i):
        %55 = alloca vector<4 x u8i>, "coerce", align 4
        %56 = alloca u32i, "coerce", align 4
        store %arg1, %56
        %57 = cast(bitcast) %56 : vector<4 x u8i>*
        %58 = load %57 : vector<4 x u8i>
        %59 = alloca u32i, "coerce", align 4
        store %arg0, %59
        %60 = cast(bitcast) %59 : vector<4 x u8i>*
        %61 = load %60 : vector<4 x u8i>
        %62 = alloca vector<4 x u8i>, "x", align 4
        %63 = alloca vector<4 x u8i>, "y", align 4
        %64 = alloca vector<4 x u8i>, "__retval", align 4
        store %61, %62
        store %58, %63
        %65 = load %62 : vector<4 x u8i>, align 4
        %66 = load %63 : vector<4 x u8i>, align 4
        %67 = div %65, %66 : vector<4 x u8i>
        store %67, %64
        %68 = load %64 : vector<4 x u8i>
        store %68, %55
        %69 = cast(bitcast) %55 : u32i*
        %70 = load %69 : u32i
        return %70
}
fn memcmp(%arg0: void*, %arg1: void*, %arg2: u64i) -> s32i [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca u32i, "coerce", align 4
    %1 = alloca vector<4 x u8i>, "coerce", align 4
    %2 = alloca vector<4 x u8i>, "coerce", align 4
    %3 = alloca u32i, "coerce", align 4
    %4 = alloca vector<4 x u8i>, "coerce", align 4
    %5 = alloca u32i, "coerce", align 4
    %6 = alloca vector<4 x u8i>, "coerce", align 4
    %7 = alloca s32i, "__retval", align 4
    %8 = alloca vector<4 x u8i>, "x", align 4
    %9 = alloca vector<4 x u8i>, "y", align 4
    %10 = alloca vector<4 x u8i>, "z", align 4
    %11 = const 0 : s32i
    store %11, %7
    %12 = const [5, 5, 5, 5] : vector<4 x u8i>
    store %12, %8, align 4
    %13 = const [2, 2, 2, 2] : vector<4 x u8i>
    store %13, %9, align 4
    %14 = load %8 : vector<4 x u8i>, align 4
    store %14, %6
    %15 = cast(bitcast) %6 : u32i*
    %16 = load %15 : u32i
    %17 = call @f1(%16) : u32i [all]
    store %17, %5
    %18 = cast(bitcast) %5 : vector<4 x u8i>*
    %19 = load %18 : vector<4 x u8i>
    store %19, %10, align 4
    scope {
        %49 = cast(bitcast) %9 : void*
        %50 = cast(bitcast) %10 : void*
        %51 = const 4 : u64i
        %52 = call @memcmp(%49, %50, %51) : s32i [all]
        %53 = const 0 : s32i
        %54 = cmp ne %52, %53 : bool
        if %54 {
            call @abort() [all]
            yield
        }
        yield
    }
    %20 = load %8 : vector<4 x u8i>, align 4
    store %20, %4
    %21 = cast(bitcast) %4 : u32i*
    %22 = load %21 : u32i
    %23 = call @f2(%22) : u32i [all]
    store %23, %3
    %24 = cast(bitcast) %3 : vector<4 x u8i>*
    %25 = load %24 : vector<4 x u8i>
    store %25, %10, align 4
    scope {
        %43 = cast(bitcast) %9 : void*
        %44 = cast(bitcast) %10 : void*
        %45 = const 4 : u64i
        %46 = call @memcmp(%43, %44, %45) : s32i [all]
        %47 = const 0 : s32i
        %48 = cmp ne %46, %47 : bool
        if %48 {
            call @abort() [all]
            yield
        }
        yield
    }
    %26 = load %8 : vector<4 x u8i>, align 4
    %27 = load %9 : vector<4 x u8i>, align 4
    store %26, %2
    %28 = cast(bitcast) %2 : u32i*
    %29 = load %28 : u32i
    store %27, %1
    %30 = cast(bitcast) %1 : u32i*
    %31 = load %30 : u32i
    %32 = call @f3(%29, %31) : u32i [all]
    store %32, %0
    %33 = cast(bitcast) %0 : vector<4 x u8i>*
    %34 = load %33 : vector<4 x u8i>
    store %34, %10, align 4
    scope {
        %37 = cast(bitcast) %9 : void*
        %38 = cast(bitcast) %10 : void*
        %39 = const 4 : u64i
        %40 = call @memcmp(%37, %38, %39) : s32i [all]
        %41 = const 0 : s32i
        %42 = cmp ne %40, %41 : bool
        if %42 {
            call @abort() [all]
            yield
        }
        yield
    }
    %35 = const 0 : s32i
    store %35, %7
    %36 = load %7 : s32i
    return %36
}
