tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr61306_3.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr61306-3.c" (c, x86_64-unknown-linux-gnu)
global a : s16i = -1 [external, default, align 2, dso_local]
global c : s8i = 0 [external, default, align 1, dso_local]
global b : s32i = 0 [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @a : s16i*
    %3 = load %2 : s16i, align 2
    %4 = cast(integral) %3 : s8i
    %5 = get_global @c : s8i*
    store %4, %5, align 1
    %6 = get_global @a : s16i*
    %7 = load %6 : s16i, align 2
    %8 = cast(integral) %7 : s32i
    %9 = get_global @c : s8i*
    %10 = load %9 : s8i, align 1
    %11 = cast(integral) %10 : s32i
    %12 = or %8, %11 : s32i
    %13 = get_global @b : s32i*
    store %12, %13, align 4
    scope {
        %16 = get_global @b : s32i*
        %17 = load %16 : s32i, align 4
        %18 = const -1 : s32i
        %19 = cmp ne %17, %18 : bool
        if %19 {
            call @abort() [all]
            yield
        }
        yield
    }
    %14 = const 0 : s32i
    store %14, %0
    %15 = load %0 : s32i
    return %15
}
